@@ -23,6 +23,7 @@
   :profiles {:dev [:project/dev :profiles/dev]
              :repl {:prep-tasks ^:replace ["javac" "compile"]
                     :dependencies [[cider/piggieback "0.5.3"]]
+                    :jvm-opts ["-Djdk.attach.allowAttachSelf"]
                     :repl-options {:init-ns user
                                    :nrepl-middleware [cider.piggieback/wrap-cljs-repl]
                                    :host "0.0.0.0"
